--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,22 @@
   visibility: visible;
   animation: fadeOut 1s ease-in-out;
 }
+
+/* .gradient-border {
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  position: relative;
+  z-index: 0;
+}
+
+.gradient-border::before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: linear-gradient(to right, #007FFF, #3299CC); 
+  z-index: -1;
+  border-radius: inherit; 
+} */
