--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,39 @@
   visibility: visible;
   animation: fadeOut 1s ease-in-out;
 }
+
+.button-gradient-effect {
+  position: relative;
+  overflow: hidden;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.button-gradient-effect::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to right, #007FFF, #3299CC); /* Cores do gradiente */
+  transform: translateX(-100%);
+  transition: transform 1s ease;
+  z-index: 1; /* Coloca o gradiente atrás do brilho e do conteúdo */
+  border-radius: 0 40px 40px 0; /* Aplica o arredondamento ao gradiente */
+}
+
+.button-gradient-effect:hover::before {
+  transform: translateX(0);
+}
+
+.button-gradient-effect:hover::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: 2; /* Coloca o brilho acima do gradiente e do fundo */
+  border-radius: 0 40px 40px 0; /* Aplica o arredondamento ao brilho */
+}
+
+.button-gradient-effect > * {
+  position: relative;
+  z-index: 3; /* Coloca o conteúdo acima do gradiente e do brilho */
+}
+
+
