--- a/src/index.css
+++ b/src/index.css
@@ -58,11 +58,11 @@
   content: '';
   position: absolute;
   inset: 0;
-  background: linear-gradient(to right, #007FFF, #3299CC); /* Cores do gradiente */
+  background: linear-gradient(to right, #3299CC, #007FFF); 
   transform: translateX(-100%);
   transition: transform 1s ease;
-  z-index: 1; /* Coloca o gradiente atrás do brilho e do conteúdo */
-  border-radius: 0 40px 40px 0; /* Aplica o arredondamento ao gradiente */
+  z-index: 1; 
+  border-radius: 0 40px 40px 0; 
 }
 
 .button-gradient-effect:hover::before {
@@ -73,13 +73,13 @@
   content: '';
   position: absolute;
   inset: 0;
-  z-index: 2; /* Coloca o brilho acima do gradiente e do fundo */
-  border-radius: 0 40px 40px 0; /* Aplica o arredondamento ao brilho */
+  z-index: 2; 
+  border-radius: 0 40px 40px 0; 
 }
 
 .button-gradient-effect > * {
   position: relative;
-  z-index: 3; /* Coloca o conteúdo acima do gradiente e do brilho */
+  z-index: 3; 
 }
 
 
